--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -93,6 +93,10 @@ environments:
         registry_deployment_for_image_tag: "gitlab-registry"
         cluster: gstg-gitlab-gke
         region: us-east1
+        ## TODO: After we migrate all environments to zonal clusters, this should move into the regional_cluster_defaults
+        gitlab:
+          webservice:
+            enabled: false
 
   # Zonal clusters for gstg, these three environments
   # inherit from the gstg environemnt, which is the
@@ -105,6 +109,10 @@ environments:
       -
         cluster: gstg-us-east1-b
         region: us-east1-b
+        ## TODO: After we migrate all environments to zonal clusters, this can be removed
+        gitlab:
+          webservice:
+            enabled: true
 
   gstg-us-east1-c:
     values:
@@ -114,6 +122,10 @@ environments:
       -
         cluster: gstg-us-east1-c
         region: us-east1-c
+        ## TODO: After we migrate all environments to zonal clusters, this can be removed
+        gitlab:
+          webservice:
+            enabled: true
 
   gstg-us-east1-d:
     values:
@@ -123,6 +135,10 @@ environments:
       -
         cluster: gstg-us-east1-d
         region: us-east1-d
+        ## TODO: After we migrate all environments to zonal clusters, this can be removed
+        gitlab:
+          webservice:
+            enabled: true
 
   gprd-cny:
     values:
