Disables the webservice pod in the regional cluster

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -91,6 +91,10 @@ environments:
         registry_deployment_for_image_tag: "gitlab-registry"
         cluster: gstg-gitlab-gke
         region: us-east1
+        ## TODO: After we migrate all environments to zonal clusters, this should move into the regional_cluster_defaults
+        gitlab:
+          webservice:
+            enabled: false
 
   # Zonal clusters for gstg, these three environments
   # inherit from the gstg environemnt, which is the
@@ -103,6 +107,10 @@ environments:
       -
         cluster: gstg-us-east1-b
         region: us-east1-b
+        ## TODO: After we migrate all environments to zonal clusters, this can be removed
+        gitlab:
+          webservice:
+            enabled: true
 
   gstg-us-east1-c:
     values:
@@ -112,6 +120,10 @@ environments:
       -
         cluster: gstg-us-east1-c
         region: us-east1-c
+        ## TODO: After we migrate all environments to zonal clusters, this can be removed
+        gitlab:
+          webservice:
+            enabled: true
 
   gstg-us-east1-d:
     values:
@@ -121,6 +133,10 @@ environments:
       -
         cluster: gstg-us-east1-d
         region: us-east1-d
+        ## TODO: After we migrate all environments to zonal clusters, this can be removed
+        gitlab:
+          webservice:
+            enabled: true
 
   gprd-cny:
     values:
