--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -109,6 +109,8 @@ environments:
         region: us-east1-b
         ## TODO: After we migrate all environments to zonal clusters, this can be removed
         gitlab:
+          gitlab-shell:
+            enabled: true
           webservice:
             enabled: true
 
@@ -122,6 +124,8 @@ environments:
         region: us-east1-c
         ## TODO: After we migrate all environments to zonal clusters, this can be removed
         gitlab:
+          gitlab-shell:
+            enabled: true
           webservice:
             enabled: true
 
@@ -135,6 +139,8 @@ environments:
         region: us-east1-d
         ## TODO: After we migrate all environments to zonal clusters, this can be removed
         gitlab:
+          gitlab-shell:
+            enabled: true
           webservice:
             enabled: true
 
