Enables gitlab-shell in canary
* Enables gitlab-shell for production on the canary stage

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -130,6 +130,9 @@ environments:
         registry_deployment_for_image_tag: "gitlab-cny-registry"
         gitlab_chef_source_name: "gprd"
         stage: "cny"
+        gitlab:
+          gitlab-shell:
+            enabled: true
 
   gprd:
     values:
