Change `gprd-cny.yaml.gotmpl` to correctly inherit and merge `gprd` settings
This fixes gitlab-com/gl-infra/delivery#1309

We should now inherit and merge settings from gprd.yaml.gotmpl correctly,
and tests this by removing the duplicated setting

`gitlab.webserver.extraEnv` `LD_PRELOAD`

--- a/releases/gitlab/helmfile.yaml
+++ b/releases/gitlab/helmfile.yaml
@@ -27,5 +27,8 @@ releases:
     values:
       - values/init-values.yaml.gotmpl
       - values/values.yaml.gotmpl
+{{ if eq .Environment.Name "gprd-cny" }}
+      - values/gprd.yaml.gotmpl
+{{ end }}
       - 'values/{{`{{ .Environment.Values | getOrNil "env_prefix" | default .Environment.Name }}`}}.yaml.gotmpl'
       - values/values-from-external-sources.yaml.gotmpl
