Adds a check for auto-deploy, that validates what we are changes matches what we expect for an image only update

--- a/releases/gitlab/helmfile.yaml
+++ b/releases/gitlab/helmfile.yaml
@@ -10,6 +10,8 @@ repositories:
 
 releases:
   - name: {{.Environment.Values | getOrNil "gitlab_release_name" | default "gitlab"}}
+    labels:
+      autodeploy: true
     namespace: {{.Environment.Values | getOrNil "gitlab_namespace" | default "gitlab"}}
     chart: gitlab/gitlab
     set:
