Set SKIP_QA explicitly to true

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -178,8 +178,8 @@ variables:
       - tags
   script:
     - |
-      if [[ -n "$SKIP_QA" ]]; then
-        echo "Skipping QA because SKIP_QA is set"
+      if [[ $SKIP_QA == "true" ]]; then
+        echo "Skipping QA because SKIP_QA is set to true"
         exit 0
       fi
     - apk add curl jq
