Fix `values.yaml.gotmpl` in environments not currently running kas
Part of https://gitlab.com/gitlab-com/gl-infra/infrastructure/-/issues/11581

MR https://gitlab.com/gitlab-com/gl-infra/k8s-workloads/gitlab-com/-/merge_requests/515
introduced a bug where CI would fail in environments not running kas.

This changes fixes this, and also moves the `gitlab-secrets` helm release
over to the new helm2 chart repository address.

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -8,7 +8,7 @@ bases:
 repositories:
 # Kubernetes incubator repo of helm charts
 - name: "kubernetes-incubator"
-  url: "https://kubernetes-charts-incubator.storage.googleapis.com"
+  url: "https://charts.helm.sh/incubator"
 
 releases:
 - name:  {{ .Environment.Values | getOrNil "gitlab_secrets_release_name" | default "gitlab-secrets" }}
