Update location of KAS secret in chef to be correct
The location of the secret for KAS needs to changed in the chef side,
so we need to changed in the Kubernetes side as well. This should be
a noop operation.

Part of https://gitlab.com/gitlab-org/gitlab/-/issues/249593

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -232,4 +232,4 @@ releases:
           name: gitlab-kas-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          kas_shared_secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".kas.kas_shared_secret") | quote }}
+          kas_shared_secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.gitlab_kas.api_secret_key") | quote }}
