Revert "Merge branch 'jarv/remove-registry-regional' into 'master'"
This reverts commit 6d09c23643ea0bd4b043384b3f3f670c39dd01be, reversing
changes made to 054cc688469f3353e961c47582363a3f500debae.

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -8,10 +8,8 @@ environments:
       # on all regional clusters, in all environments
       # These are read by values.yaml.gotmpl
       - &regional_cluster_defaults
-        # Registry is disabled by default on the regional cluster
-        # and enabled selectively for preprod and canary
         registry:
-          enabled: false
+          enabled: true
         gitlab:
           webservice:
             enabled: false
@@ -57,8 +55,6 @@ environments:
         google_project: "gitlab-pre"
         gitlab_endpoint: "https://pre.gitlab.com"
         registry_deployment_for_image_tag: "gitlab-registry"
-        registry:
-          enabled: true
         gitlab:
           gitlab-shell:
             enabled: true
@@ -92,6 +88,12 @@ environments:
         kas:
           managed_cert_name: kas-staging-gitlab-com
           domain: kas.staging.gitlab.com
+      # This can be removed once
+      # https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/1321
+      # is complete
+      - registry:
+          nodeSelector:
+            type: default
 
 
   # Zonal clusters for gstg, these three environments
@@ -105,6 +107,12 @@ environments:
       -
         cluster: gstg-us-east1-b
         region: us-east1-b
+      # This can be removed once
+      # https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/1321
+      # is complete
+      - registry:
+          nodeSelector:
+            type: registry
 
   gstg-us-east1-c:
     values:
@@ -114,6 +122,12 @@ environments:
       -
         cluster: gstg-us-east1-c
         region: us-east1-c
+      # This can be removed once
+      # https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/1321
+      # is complete
+      - registry:
+          nodeSelector:
+            type: registry
 
   gstg-us-east1-d:
     values:
@@ -123,13 +137,17 @@ environments:
       -
         cluster: gstg-us-east1-d
         region: us-east1-d
+      # This can be removed once
+      # https://gitlab.com/gitlab-com/gl-infra/delivery/-/issues/1321
+      # is complete
+      - registry:
+          nodeSelector:
+            type: registry
 
   gprd-cny:
     values:
       - <<: *regional_cluster_defaults
       -
-        registry:
-          enabled: true
         google_project: "gitlab-production"
         gitlab_endpoint: "https://gitlab.com"
         gitlab_secrets_gkms_source: "gprd"
