--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -55,6 +55,7 @@ environments:
         google_project: "gitlab-pre"
         gitlab_endpoint: "https://pre.gitlab.com"
         registry_deployment_for_image_tag: "gitlab-registry"
+        registry_api_host: "registry.pre.gitlab.com"
         gitlab:
           gitlab-shell:
             enabled: true
@@ -78,6 +79,7 @@ environments:
         google_project: "gitlab-staging-1"
         gitlab_endpoint: "https://staging.gitlab.com"
         registry_deployment_for_image_tag: "gitlab-registry"
+        registry_api_host: "registry.staging.gitlab.com"
         cluster: gstg-gitlab-gke
         region: us-east1
         gitlab_extras:
@@ -158,6 +160,7 @@ environments:
       # Canary uses the same bucket as production
         registry_bucket_name: "gitlab-gprd-registry"
         registry_deployment_for_image_tag: "gitlab-cny-registry"
+        registry_api_host: "registry.gitlab.com"
         gitlab_chef_source_name: "gprd"
         stage: "cny"
         gitlab:
@@ -174,6 +177,7 @@ environments:
         google_project: "gitlab-production"
         gitlab_endpoint: "https://gitlab.com"
         registry_deployment_for_image_tag: "gitlab-registry"
+        registry_api_host: "registry.gitlab.com"
         cluster: gprd-gitlab-gke
         region: us-east1
 
