lets add the file and only change it over the course of time to remove the step necessary to touch this repo twice for one change

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -156,6 +156,7 @@ variables:
       - 'releases/**/*'
       - '*.yaml'
       - .gitlab-ci.yml
+      - CHEF_CONFIG_UPDATE
 
 .trigger-qa-smoke:
   extends:
